# MaxScale

./: .reviewboardrc  CMakeLists.txt
Documentation/: Documentation-Contents.md
Documentation/Filters/: Database-Firewall-Filter.md
Documentation/Getting-Started/: Configuration-Guide.md
Documentation/Reference/: MaxAdmin.md
Documentation/Tutorials/: Administration-Tutorial.md
cmake/: macros.cmake  testall.cmake
log_manager/: log_manager.cc  log_manager.h
log_manager/test/: testlog.c  testorder.c
parser/: CMakeLists.txt  cmdparser.c  parser.c  parser.h  tokenizer.l
parser/test/: CMakeLists.txt  test_parser.c
query_classifier/: query_classifier.cc  query_classifier.h
server/core/: CMakeLists.txt  adminusers.c  buffer.c  config.c  dbusers.c  dcb.c  externcmd.c  filter.c  gateway.c  gw_utils.c  gwdirs.c  housekeeper.c  load_utils.c  maxkeys.c  maxpasswd.c  modutil.c  monitor.c  poll.c  secrets.c  server.c  service.c  session.c  users.c  utils.c
server/core/test/: CMakeLists.txt  testhint.c  testserver.c  testservice.c  testusers.c
server/include/: buffer.h  dcb.h  filter.h  gwdirs.h.in  housekeeper.h  maxconfig.h  modules.h  monitor.h  rdtsc.h  router.h  server.h  service.h  test_utils.h
server/modules/filter/: CMakeLists.txt  canonfilter.c  dbfwfilter.c  mqfilter.c  namedserverfilter.c  qlafilter.c  regexfilter.c  slavelag.c  tee.c  testfilter.c  topfilter.c
server/modules/filter/hint/: hintparser.c
server/modules/filter/test/: harness_common.c  harness_ui.c  harness_util.c
server/modules/include/: blr.h  debugcli.h  mysql_client_server_protocol.h  readconnection.h  readwritesplit.h  readwritesplitsession.h  schemarouter.h  shardrouter.h  streamprotocol.h
server/modules/include/common/: sescmd.h
server/modules/monitor/: galeramon.c  galeramon.h  mmmon.c  mmmon.h  monitor_common.c  mysql_mon.c  mysqlmon.h  ndbclustermon.c  ndbclustermon.h
server/modules/protocol/: CMakeLists.txt  httpd.c  maxscaled.c  mysql_backend.c  mysql_client.c  mysql_common.c  plainclient.c  streambackend.c  streamclient.c  streamcommon.c  telnetd.c  testprotocol.c
server/modules/routing/: CMakeLists.txt  cli.c  debugcli.c  debugcmd.c  plainroute.c  readconnroute.c  restful.c  streamrouter.c  testroute.c
server/modules/routing/binlog/: blr.c  blr_file.c  blr_master.c  blr_slave.c
server/modules/routing/common/: sescmd.c
server/modules/routing/maxinfo/: maxinfo.c  maxinfo_exec.c
server/modules/routing/readwritesplit/: CMakeLists.txt  readwritesplit.c  rws_common.c
server/modules/routing/schemarouter/: CMakeLists.txt  schemarouter.c  sharding_common.c  shardrouter.c
server/modules/routing/schemarouter/test/: CMakeLists.txt
server/test/: maxscale_test.cnf  maxscale_test.h.in
utils/: skygw_debug.h  skygw_utils.cc  skygw_utils.h
