if(FLEX_FOUND)
  include_directories(${CMAKE_CURRENT_SOURCE_DIR})
  include_directories(${CMAKE_CURRENT_BINARY_DIR})
  flex_target(tokenizer tokenizer.l ${CMAKE_CURRENT_BINARY_DIR}/tokenizer.c)
  add_library(parser SHARED parser.c ${FLEX_tokenizer_OUTPUTS})
  install(TARGETS parser COMPONENT lib DESTINATION ${MAXSCALE_LIBDIR})
  if(BUILD_TESTS)
    add_subdirectory(test)
  endif()
else()
  message(FATAL_ERROR "Flex was not found.")
endif()
