if(FLEX_FOUND)
  include_directories(${CMAKE_CURRENT_SOURCE_DIR})
  include_directories(${CMAKE_CURRENT_BINARY_DIR})
  flex_target(tokenizer tokenizer.l ${CMAKE_CURRENT_BINARY_DIR}/tokenizer.c)
  add_library(parser SHARED parser.c ${FLEX_tokenizer_OUTPUTS})
  add_executable(maxparser cmdparser.c parser.c ${FLEX_tokenizer_OUTPUTS})
  target_compile_options(maxparser PUBLIC "-std=c99")
  install(TARGETS parser COMPONENT lib DESTINATION ${MAXSCALE_LIBDIR})
  if(BUILD_TOOLS)
    install(TARGETS maxparser DESTINATION ${MAXSCALE_BINDIR})
  endif()
  if(BUILD_TESTS)
    add_subdirectory(test)
  endif()
else()
  message(FATAL_ERROR "Flex was not found.")
endif()
