if(OLD_RWS)
  add_library(readwritesplit SHARED readwritesplit.c)
  target_link_libraries(readwritesplit ssl pthread log_manager query_classifier)
  install(TARGETS readwritesplit DESTINATION ${MAXSCALE_LIBDIR})
else()
  add_library(readwritesplit SHARED rws.c rws_session.c rws_error.c rws_utils.c rws_routing.c)
  target_link_libraries(readwritesplit ssl pthread log_manager query_classifier routing_common)
  install(TARGETS readwritesplit DESTINATION ${MAXSCALE_LIBDIR})
endif()
if(BUILD_TESTS)
add_subdirectory(test)
endif()
